# stock-hub-website

./: .replit  LICENSE  README.md  app.py  pyproject.toml
templates/: home.html  login.html  register.html  stockitem.html
